--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.GameFragment"
-    >
+    tools:context=".presentation.GameFragment">
 
     <TextView
         android:id="@+id/tv_timer"
@@ -18,8 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="00:00"
-        />
+        tools:text="00:00" />
 
     <TextView
         android:id="@+id/tv_sum"
@@ -33,8 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:text="1"
-        />
+        tools:text="1" />
 
     <TextView
         android:id="@+id/tv_left_number"
@@ -48,8 +44,7 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_sum"
-        tools:text="7"
-        />
+        tools:text="7" />
 
     <TextView
         android:id="@+id/tv_question"
@@ -62,8 +57,7 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_left_number"
-        app:layout_constraintTop_toTopOf="@id/tv_left_number"
-        />
+        app:layout_constraintTop_toTopOf="@id/tv_left_number" />
 
     <TextView
         android:id="@+id/tv_option_1"
@@ -75,8 +69,7 @@
         app:layout_constraintEnd_toStartOf="@id/tv_option_5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="1"
-        />
+        tools:text="1" />
 
     <TextView
         android:id="@+id/tv_option_2"
@@ -87,8 +80,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_option_4"
         app:layout_constraintEnd_toStartOf="@id/tv_option_6"
         app:layout_constraintStart_toEndOf="@id/tv_option_4"
-        tools:text="2"
-        />
+        tools:text="2" />
 
     <TextView
         android:id="@+id/tv_option_3"
@@ -99,8 +91,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_option_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_option_5"
-        tools:text="3"
-        />
+        tools:text="3" />
 
     <TextView
         android:id="@+id/tv_option_4"
@@ -112,8 +103,7 @@
         app:layout_constraintEnd_toStartOf="@id/tv_option_5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="4"
-        />
+        tools:text="4" />
 
     <TextView
         android:id="@+id/tv_option_5"
@@ -124,8 +114,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_option_6"
         app:layout_constraintStart_toEndOf="@id/tv_option_4"
-        tools:text="5"
-        />
+        tools:text="5" />
 
     <TextView
         android:id="@+id/tv_option_6"
@@ -136,19 +125,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_option_5"
-        tools:text="6"
-        />
+        tools:text="6" />
 
     <TextView
         android:id="@+id/tv_answers_progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/progress_answers"
         android:layout_margin="16dp"
-        app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintTop_toBottomOf="@id/tv_left_number"
+        android:text="@string/progress_answers"
         app:layout_constraintBottom_toTopOf="@id/progress_bar"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tv_left_number"
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -160,7 +147,6 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_option_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_answers_progress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
